--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [file_paths]
-model_dir    = D:/01.All/01.PythonProjects/semantic/models/
-model        = D:/01.All/01.PythonProjects/semantic/models/poplar_final.pt
+model_dir    = /content/StomataGSMax/model
+model        = /content/StomataGSMax/poplar.pt
 
-dataset      = D:/01.All/01.PythonProjects/semantic/datasets/Wheat/
-predict_in   = D:/01.All/01.PythonProjects/semantic/predict/
-predict_out  = D:/01.All/01.PythonProjects/semantic/predict/out/
+dataset      = /content/StomataGSMax/datasets/poplar/
+predict_in   = /content/StomataGSMax/predict/unannotated/
+predict_out  = /content/StomataGSMax/predict/annotated/
 
 [network_params]
 network = attunet
