--- a/config.ini
+++ b/config.ini
@@ -40,7 +40,7 @@ um_per_pixel = 1.2547
 
 [elevations]
 default_length = 50.0
-guess_elevation = True
+guess_elevation = False
 length_883 = 45
 length_1099 = 52
 
